--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ android {
         // Espresso
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    compileOptions.incremental = false
+
     buildTypes {
         release {
             minifyEnabled false
@@ -27,6 +29,20 @@ android {
     }
 }
 
+//android.applicationVariants.all { variant ->
+////    if (variant.buildType.name == "debug") {
+//        def aptOutputDir = new File(buildDir, "generated/source/apt/${variant.unitTestVariant.dirName}")
+//        variant.unitTestVariant.addJavaSourceFoldersToModel(aptOutputDir)
+//        assembleDebug.finalizedBy('assembleDebugUnitTest')
+////    }
+//}
+
+// Add these 3 lines
+//android.libraryVariants.all {
+//    def aptOutputDir = new File(buildDir, "generated/source/apt/${it.unitTestVariant.dirName}")
+//    it.unitTestVariant.addJavaSourceFoldersToModel(aptOutputDir)
+//}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
@@ -35,9 +51,11 @@ dependencies {
 
     // Dagger 2
     implementation 'com.google.dagger:dagger:2.16'
+    testImplementation 'com.google.dagger:dagger:2.16'
     implementation 'com.google.dagger:dagger-android:2.15'
     implementation 'com.google.dagger:dagger-android-support:2.15'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.15'
+    androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.15' // Required for Dagger to build test @Components!
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
 
     // Espresso
