--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jupiter191.journeystore">
+    package="com.liam191.journeystore">
 
     <application
         android:allowBackup="true"
@@ -9,13 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".feature_journeylist.JourneyListActivity">
+        <activity android:name="com.liam191.journeystore.feature_journeylist.JourneyListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.liam191.journeystore.feature_addjourney.AddJourneyActivity"></activity>
     </application>
 
 </manifest>
