Added tests for UI elements of Add Journey activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,10 @@ android {
         // Espresso
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
     compileOptions.incremental = false
 
     buildTypes {
