--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,15 +37,16 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     testImplementation 'junit:junit:4.12'
 
     // Dagger 2
     implementation 'com.google.dagger:dagger:2.16'
     testImplementation 'com.google.dagger:dagger:2.16'
-    implementation 'com.google.dagger:dagger-android:2.15'
-    implementation 'com.google.dagger:dagger-android-support:2.15'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.15'
-    androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.15'
+    implementation 'com.google.dagger:dagger-android:2.16'
+    implementation 'com.google.dagger:dagger-android-support:2.16'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
+    androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.16'
     // Required for Dagger to build test @Components!
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
 
@@ -57,5 +58,5 @@ dependencies {
 
     // Robolectric
     testImplementation 'org.robolectric:robolectric:4.2'
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
 }
