Added fakes for ViewModelFactory and Application. Extended AndroidJUnitRunner to supply fake Application to tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         versionName "1.0"
 
         // Espresso
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.liam191.journeystore.CustomTestRunner"
     }
     compileOptions {
         sourceCompatibility = '1.8'
